--- a/components/ye1h7ulii-java-quarkus/overlays/development/deployment-patch.yaml
+++ b/components/ye1h7ulii-java-quarkus/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: ye1h7ulii-java-quarkus
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-cc8259a2af.jew1.p3.openshiftapps.com/rhtap/rhtap-qe:622d5d4c400f77ecc610e2ed001cec65afbc895b@sha256:fb8bbf503760b85217cd74adb83eae0aafe1684a7fb573d5270cdbf7b4a5d2f2
+          name: container-image
